# CardGame

./: .gitignore  CMakeLists.txt
src/: CardG.cpp  CardG.h  Game.cpp  Game.h  Screen.c  Screen.h  main.cpp
